interstitial ad done

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">App Rock</string>
+    <string name="ad_mob_id" translatable="false">ca-app-pub-6941619747897449~8354678761</string>
 </resources>
